# pacific-demo

./: .gitignore  PROMPT.MD  README.md  pyproject.toml
app/: main.py
app/components/: models.py  personal_search.py  reranker.py
app/static/: index.html  script.js  style.css  table_script.js
app/templates/: table.html
