[tool.poetry]
name = "personal-search-demo"
version = "0.1.0"
description = "FastAPI demo for personal search with reranking and LLM summarization."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.115.12"
uvicorn = {extras = ["standard"], version = ">=0.34.2"}
pydantic = ">=2.11.4"
pydantic-ai = "^0.2.5"
openai = ">=1.79.0"
python-dotenv = ">=1.0.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed, e.g.:
# pytest = "^7.0"
# black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 